--- a/style.css
+++ b/style.css
@@ -2,4 +2,73 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	color: rgb(137, 248, 119);
+	/* text-align: center; */
+}
+
+@font-face {
+	font-family: 'Galactic Basic';
+	src: url('./galacticBasic.otf') format(otf);
+}
+
+body {
+	margin: 2rem;
+	font-family: 'Galactic Basic';
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.9);
+}
+
+.header {
+	color: rgb(211, 44, 31);
+	text-align: center;
+	font-size: 45px;
+}
+
+main {
+	margin: 3rem, 0, 0, 0;
+}
+
+.container1 {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+}
+
+.div1 {
+	border: 5px solid rgb(137, 248, 119);
+	margin: 1rem;
+	height: 400px;
+	display: flex;
+	flex-direction: column;
+	line-height: 1.4;
+	font-size: 80%;
+}
+
+.img {
+	border: 5px solid rgb(137, 248, 119);
+	height: 400px;
+	margin: 1rem;
+}
+
+.comtainer2 {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+}
+
+.div2 {
+	border: 5px solid rgb(137, 248, 119);
+	display: flex;
+	padding: 1rem;
+	margin: 1rem;
+	flex-direction: column;
+	line-height: 1.4;
+	font-size: 80%;
+}
+
+.price {
+	margin: 1rem;
+	text-align: center;
+	padding: 1rem;
+	border: 5px solid rgb(137, 248, 119);
 }
