--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 body {
 	margin: 2rem;
 	font-family: 'Galactic Basic';
+	/* font-family: 'Space Mono', monospace; */
 	height: 100vh;
 	background-color: rgba(0, 0, 0, 0.9);
 }
