adds galactic basic font

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 @font-face {
 	font-family: 'Galactic Basic';
-	src: url('galacticBasic.otf') format(otf);
+	src: url('galacticBasic.otf') format(.otf);
 }
 
 body {
